@startuml

class User {
String username
String password
String fullName
String email
Boolean enabled
Date lastPasswordResetDate
}

class Authority {
private Long id
private AuthorityName name
}

enum AuthorityName {
ROLE_USER
ROLE_ADMIN
}

User *-- Authority
Authority o-- AuthorityName


class Account {
    String name
    String notes
    boolean active
}

enum AccountType {
    CASH
    BANK
    CREDIT_CARD
    DEBIT_CARD
    PAYPAL
}
Account o-- AccountType
Account *-- User
@enduml
